# winremote-setup

./: install.ps1  pyproject.toml  uninstall.ps1
src/winremote/: __init__.py  __main__.py
